test/invalid-data/missing-discriminator/main.ts
export interface A {
    type: string;
}

export interface B {}

/**
 * @discriminator type
 */
export type MyType = A | B;
